# learn_ml

./: .gitignore  pyproject.toml  qdldl-0.1.7.post0-cp312-cp312-macosx_10_9_universal2.whl
ml_foundations/: Matrix-Properties.ipynb  scratch.md
terms/: TERMS.md  sandbox.ipynb
udl_book/: Understanding-Deep-Learning.md
udl_book/Jupyter_Notebooks/Chap03/: 3_1_Shallow_Networks_I.ipynb  NOTES.ipynb
udl_book/TREX_notes/: Chapter3_gpt-qa.md  np-ops.ipynb
udl_book/TREX_notes/Chapter-10_Convolutional-Networks/: notes.ipynb
udl_book/UDL_Jupyter-Notebooks/Chap04/: 4_1_Composing_Networks.ipynb  4_2_Clipping_functions.ipynb  4_3_Deep_Networks.ipynb
udl_book/UDL_Jupyter-Notebooks/Chap05/: 5_1_Least_Squares_Loss.ipynb  5_2_Binary_Cross_Entropy_Loss.ipynb
udl_book/UDL_Jupyter-Notebooks/Chap10/: 10_1_1D_Convolution.ipynb
