[tool.poetry]
name = "learn_ml"
version = "0.1.0"
description = "Learning Machine Learning"
authors = ["Tobiah Rex <tobiah.rex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "0.21.1"
plotly = "2.2.3"
pyparsing = "2.2.0"
python-dateutil = "2.6.1"
pytz = "2017.3"
requests = "2.18.4"
scipy = "1.0.0"
scikit-learn = "0.19.1"
six = "1.11.0"
tqdm = "4.19.5"
zipline = "1.2.0"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
notebook = "^7.1.2"
colour = "0.1.5"
cvxpy = "1.0.3"
cycler = "0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
