[tool.poetry]
name = "learn_ml"
version = "0.1.0"
description = "Learning Machine Learning"
authors = ["Tobiah Rex <tobiah.rex@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
pandas = "^2.2.1"
plotly = "^5.20.0"
pyparsing = "^3.1.2"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
requests = "^2.31.0"
scipy = "^1.12.0"
scikit-learn = "^1.4.1.post1"
six = "^1.16.0"
tqdm = "^4.66.2"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
notebook = "^7.1.2"
colour = "^0.1.5"
cvxpy = "^1.4.2"
cycler = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
